# git-shadow

./: CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  git-shadow-requirements.md
.github/workflows/: ci.yml  release.yml
dev-hooks/: pre-commit
docs/: CLAUDE.md  feature-request-directory-phantom.md  usage.ja.md  usage.md
src/: CLAUDE.md  cli.rs  config.rs  diff_util.rs  error.rs  exclude.rs  fs_util.rs  git.rs  lib.rs  lock.rs  main.rs  merge.rs  path.rs
src/commands/: CLAUDE.md  add.rs  diff.rs  doctor.rs  hook.rs  install.rs  mod.rs  rebase.rs  remove.rs  restore.rs  resume.rs  status.rs  suspend.rs
src/hooks/: CLAUDE.md  mod.rs  post_commit.rs  post_merge.rs  pre_commit.rs
tests/: CLAUDE.md  test_commit_cycle.rs
tests/common/: mod.rs
