[package]
name = "git-shadow"
version = "0.1.0"
edition = "2021"
description = "Manage local-only changes in Git repositories"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
similar = { version = "2", features = ["text"] }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
colored = "2"
is-terminal = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
